2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/ckinit.c: The Shared Memory Driver no longer requires the
	special IOCTL in Clock_control. This was a hack which has existed
	since before the Classic API Timer Manager was implemented. All
	implementations of and references to Clock_control were removed.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c: Convert to "bool".

2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Add capability for bootcard.c BSP Initialization
	Framework to ask the BSP where it has memory for the RTEMS Workspace
	and C Program Heap. These collectively are referred to as work area.
	If the BSP supports this, then it does not have to include code to
	split the available memory between the two areas. This reduces the
	amount of code in the BSP specific bspstart.c file. Additionally, the
	shared framework can initialize the C Library, call
	rtems_debug_enable(), and dirty the work area memory. Until most/all
	BSPs support this new capability, if the BSP supports this, it should
	call RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION from its configure.ac.
	When the transition is complete, this autoconf macro can be removed.

2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Rework to avoid .rel files.

2008-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Refactored and renamed initialization routines to
	rtems_initialize_data_structures, rtems_initialize_before_drivers,
	rtems_initialize_device_drivers, and
	rtems_initialize_start_multitasking. This opened the sequence up so
	that bootcard() could provide a more robust and flexible framework
	which is easier to explain and understand. This also lays the
	groundwork for sharing the division of available memory between the
	RTEMS workspace and heap and the C library initialization across all
	BSPs.

2008-03-03	Joel Sherrill <joel.sherrill@OARcorp.com>
